Proses Pembuatan Spinner dengan menambahkan XML Value pada Layout dan diberi Judul arrays

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,7 +167,8 @@
         <Spinner
             android:id="@+id/spinnerlokasi"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:entries="@array/lokal" />
 
         <TextView
             android:id="@+id/tv14"
